--- a/deep-learning.html
+++ b/deep-learning.html
@@ -157,7 +157,7 @@ Learning team. Academic and commercial groups around the world are using?...</p>
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/samsungssi/job/oA4cafwK'>Samsung Semiconductor, Inc. Careers - Advanced Neural Processor Lab - Deep Learning Hardware Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/samsungssi/job/oA4cafwK'>Samsung Semiconductor, Inc. Careers - Advanced Neural Processor Lab - Deep Learning Hardware Architect</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
@@ -228,7 +228,7 @@ text?...</p>
 <p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-06-17</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999689950075-thesis-deep-learning-for-autonomous-cars'>Bosch Group Thesis Deep Learning for Autonomous Cars | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999689950075-thesis-deep-learning-for-autonomous-cars'>Bosch Group Thesis Deep Learning for Autonomous Cars | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-17</p>
 <hr/>
@@ -236,7 +236,7 @@ text?...</p>
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-06-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/aptiv-mobility/07e59f03-eafe-425e-b385-0dcc0f858a2a/apply'>Aptiv-Mobility - Computer Vision/Deep Learning Intern</a></h5> 
+<h5><a href='https://jobs.lever.co/aptiv-mobility/07e59f03-eafe-425e-b385-0dcc0f858a2a/apply'>Aptiv-Mobility - Computer Vision/Deep Learning Intern</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>19 hours ago ... Computer Vision/Deep Learning Intern. Singapore, Singapore. Advanced 
 Engineering ? AM - AV Engineering Software - Machine Learning. Intern?...</p>
@@ -261,7 +261,7 @@ daytime?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/cresta/cca20c5d-17be-490e-a0a8-4d8817e3049b'>Cresta - Software Engineer (NLP/Deep Learning)</a></h5> 
+<h5><a href='https://jobs.lever.co/cresta/cca20c5d-17be-490e-a0a8-4d8817e3049b'>Cresta - Software Engineer (NLP/Deep Learning)</a></h5> 
 <p><span class="badge badge-light">Palo Alto, California</span></p>
 <p>Posted on: 2019-06-07</p>
 <hr/>
@@ -345,7 +345,7 @@ source and research community is a fundamental part of your role. Competitive?..
 <p>4 days ago ... We're looking for firmware engineers to build the future of hearing instruments 
 and take on significant leadership and responsibility at a fast-growing startup.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://adobe.wd5.myworkdayjobs.com/en-US/external_university/job/San-Jose/Deep-Learning-Research-Intern_75223'>Deep Learning Research Intern</a></h5> 
+<h5><a href='https://adobe.wd5.myworkdayjobs.com/en-US/external_university/job/San-Jose/Deep-Learning-Research-Intern_75223'>Deep Learning Research Intern</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Job Description. Position summary: We are seeking computer vision and deep 
 learning students to conduct new research in one of several project areas. 
@@ -463,7 +463,7 @@ Project?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
