--- a/project-manager.html
+++ b/project-manager.html
@@ -52,7 +52,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kapten.workable.com/j/08E9263BDF'>Kapten - Jobs: International Operations Project Manager (M/F) - CDI Paris (relocation accepted) - Apply online</a></h5> 
+<h5><a href='https://kapten.workable.com/j/08E9263BDF'>Kapten - Jobs: International Operations Project Manager (M/F) - CDI Paris (relocation accepted) - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -68,7 +68,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://boh.referrals.selectminds.com/jobs/project-manager-corporate-real-estate-facilities-3745'>Project Manager (Corporate Real Estate & Facilities) - Bank of Hawaii Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boh.referrals.selectminds.com/jobs/project-manager-corporate-real-estate-facilities-3745'>Project Manager (Corporate Real Estate & Facilities) - Bank of Hawaii Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -92,7 +92,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/premisehealth/job/oh5pafwF'>Premise Health Careers - Senior Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/premisehealth/job/oh5pafwF'>Premise Health Careers - Senior Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -100,7 +100,7 @@
 <p><span class="badge badge-light">San Mateo California</span></p>
 <p>Posted on:: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://botify-jobs.workable.com/j/7B7438CBC6'>Botify - Jobs: Client Delivery Manager/Project Manager - Apply online</a></h5> 
+<h5><a href='https://botify-jobs.workable.com/j/7B7438CBC6'>Botify - Jobs: Client Delivery Manager/Project Manager - Apply online</a></h5> 
 <p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -356,7 +356,7 @@ new program management office to support the NIH. On our team, you'll monitor?..
 <p>Jul 14, 2019 ... JOB SUMMARY The purpose of this position is to provide Program Management 
 from low to medium cross-functional projects and programs. Characteristics.....</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/ddb/job/ouqCafwq'>DDB Careers - Digital Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/ddb/job/ouqCafwq'>DDB Careers - Digital Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -388,7 +388,7 @@ in?...</p>
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/csenergy/113463d9-8f08-4df6-a0b6-42c89a8796ee'>CS Energy - Project Manager - MA</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/csenergy/113463d9-8f08-4df6-a0b6-42c89a8796ee'>CS Energy - Project Manager - MA</a></h5> 
 <p><span class="badge badge-light">Worcester</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -489,11 +489,11 @@ motivated, and forward-thinking? At Codetribe you'll have the opportunity to?...
 <p><span class="badge badge-light">Singapore Singapore Malaysia</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ComputerConsultantsInternational1/743999692214919-pmo-sr-it-project-manager-expert-job-id-602057-'>Computer Consultants International, Inc. PMO Sr. IT Project Manager - Expert (Job ID: 602057) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ComputerConsultantsInternational1/743999692214919-pmo-sr-it-project-manager-expert-job-id-602057-'>Computer Consultants International, Inc. PMO Sr. IT Project Manager - Expert (Job ID: 602057) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://verisys.recruiterbox.com/jobs/fk03f4p/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://verisys.recruiterbox.com/jobs/fk03f4p/'>
     Project Manager at Verisys
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
